--- a/monolith-bsep/client/package.json
+++ b/monolith-bsep/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --ssl --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
