--- a/monolith-bsep/server/src/main/resources/application.properties
+++ b/monolith-bsep/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port = 8443
-server.ssl.key-store=classpath:mykeystore.jks
-server.ssl.key-store-password=pass123
-server.ssl.key-password = pass123
+#server.port = 8443
+#server.ssl.key-store=classpath:mykeystore.jks
+#server.ssl.key-store-password=pass123
+#server.ssl.key-password = pass123
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
