--- a/monolith/server/src/main/resources/application.properties
+++ b/monolith/server/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-#server.port = 8443
-#server.ssl.key-store=classpath:mykeystore.jks
-#server.ssl.key-store-password=pass123
-#server.ssl.key-password = pass123
+
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/bsep
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=admin
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
@@ -22,3 +19,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+# iskljuciti kasnije. samo za dev
