--- a/monolith/server/src/main/resources/application.properties
+++ b/monolith/server/src/main/resources/application.properties
@@ -1,22 +1,13 @@
-
-#Spring DataSource
-spring.datasource.driverClassName=org.postgresql.Driver
-
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
-spring.datasource.username=postgres
-spring.datasource.password=root
 
-#JPA-Hibernate
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
 
-#kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
-spring.jpa.hibernate.ddl-auto = create-drop
-
-#https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#optimizacija za postgres upite
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
-# iskljuciti kasnije. samo za dev
