--- a/monolith/server/src/main/resources/application.properties
+++ b/monolith/server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
 spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:root}
-spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:monolith}
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
